Fixed up scroll position on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,8 @@ a:hover{
 
 nav{
 	text-align:center;
+	padding-left:5px;
+	padding-right:5px;
 }
 
 nav ul{
